--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=Montserrat:400|Inconsolata:400");
+/* @import url("https://fonts.googleapis.com/css?family=Montserrat:400|Inconsolata:400"); */
 *,
 ::after,
 ::before {
@@ -19,7 +19,7 @@
   --primary-600: #554ed9;
   --primary-700: #4640b3;
   --primary-800: #37338c;
-  --primary-900:  #282566;
+  --primary-900: #282566;
   --primary-1000: #191740;
   --primary-1100: #0a0919;
   /* grey */
@@ -786,3 +786,4 @@ form > *:last-child {
   color: var(--primary-500);
   text-transform: capitalize;
 }
+
